fix appearance on mobile

--- a/client/src/styles/components/_renku_home.scss
+++ b/client/src/styles/components/_renku_home.scss
@@ -86,6 +86,18 @@ nav.rk-anon-home .nav-link {
 #rk-anon-home-section1 {
   @extend .section-content;
   min-height: 800px;
+
+  h1 {
+    font-size: 40px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  #rk-anon-home-section1 {
+    h1 {
+      font-size: 50px;
+    }
+  }
 }
 
 #rk-anon-home-section2 {
